<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_fragment_log_in_btn">Log in</string>
    <string name="login_fragment_sign_up_btn">Sign up</string>
    <string name="login_fragment_username_hint">Enter your username</string>
    <string name="login_fragment_password_hint">Enter your password</string>
    <string name="welcome_fragment_continue_btn_title">Continue</string>
    <string name="welcome_fragment_subheading">Tap "Continue" to navigate to the store.</string>
    <string name="welcome_fragment_heading">Welcome to the Shoe Store application!</string>
    <string name="instructions_heading">ShoeStore application</string>
    <string name="instructions_fragment_subheading">In this application you can buy new shoes.</string>
    <string name="instructions_fragment_cta_title">View Stock</string>
    <string name="stock_list_fab_content_description">Add new Shoes</string>
    <string name="stock_list_empty_list_text">Tap the "Plus" button to add new shoes.</string>
    <string name="stock_item_name_template"><![CDATA[<b>Name: </b>%1$s]]></string>
    <string name="stock_item_company_template"><![CDATA[<b>Size: </b>%1$s]]></string>
    <string name="stock_item_size_template"><![CDATA[<b>Company: </b>%1$s]]></string>
    <string name="stock_item_description_template"><![CDATA[<b>Description:</b><br/>%1$s]]></string>
    <string name="btn_logout_title">Logout</string>
    <string name="add_stock_item_header">Please enter the details</string>
    <string name="add_stock_item_name_hint">Name</string>
    <string name="add_stock_item_company_hint">Company</string>
    <string name="add_stock_item_size_hint">Size</string>
    <string name="add_stock_item_description_hint">Description</string>
    <string name="add_stock_item_save_button_title">Save</string>
    <string name="add_stock_item_cancel_button_title">Cancel</string>
</resources>
